--- a/environment.yml
+++ b/environment.yml
@@ -3,4 +3,11 @@ channels:
   - conda-forge
   - bioconda
   - defaults
+dependencies:
+  - python=3.10
+  - pip
+  - pip:
+    - gradio==6.1.0
+    - pandas==1.3.3
+    - plotly==5.3.1
 prefix: /home/guozehua/miniconda3/envs/darkpool
