--- a/environment.yml
+++ b/environment.yml
@@ -10,4 +10,6 @@ dependencies:
     - gradio==6.1.0
     - pandas==1.3.3
     - plotly==5.3.1
+    - python-dotenv==0.19.2
+    - requests==2.26.0
 prefix: /home/guozehua/miniconda3/envs/darkpool
