--- a/environment.yml
+++ b/environment.yml
@@ -12,4 +12,5 @@ dependencies:
     - plotly==5.3.1
     - python-dotenv==0.19.2
     - requests==2.26.0
+    - streamlit==1.40.1
 prefix: /home/guozehua/miniconda3/envs/darkpool
